[1328] Add course header back into courses show

--- a/src/ui/Views/Course/Show.cshtml
+++ b/src/ui/Views/Course/Show.cshtml
@@ -62,6 +62,8 @@
       <div class="govuk-grid-row govuk-!-margin-top-4">
         <div class="govuk-grid-column-two-thirds">
           <div class="course-parts">
+            @await Html.PartialAsync("shared/_CourseDetailsHeaderSection")
+
             @await Html.PartialAsync("shared/_AboutCourseOverview", Model.CourseEnrichment)
 
             @{ var partialName = Model.IsSalary ? "shared/_SalaryBasedCourseOverview" : "shared/_FeeBasedCourseOverview"; }
