[1445] remove opted_in code

--- a/src/ui/Views/Course/Index.cshtml
+++ b/src/ui/Views/Course/Index.cshtml
@@ -105,7 +105,7 @@
             {
               @course.GetHasVacancies()
             }
-            @if(course.IsRunning() && Model.ProviderOptedIn)
+            @if(course.IsRunning())
             {
               <a href="@Url.Action("vacancies", "course", new {providerCode = Model.ProviderCode, accreditingInstCode = course.AccreditingProvider?.ProviderCode, courseCode = course.CourseCode})" class="govuk-link">(Edit)</a>
             }
